Tried to fix overflow problems

--- a/store-theme-project-2/styles/css/vtex.carousel.css
+++ b/store-theme-project-2/styles/css/vtex.carousel.css
@@ -1,7 +1,3 @@
 .containerImg {
-  background-color: #F0F0F0;
-}
-
-.containerImg .img {
-  max-width: 1520px;
+  background-color: #f0f0f0;
 }
